--- a/css/style.css
+++ b/css/style.css
@@ -197,6 +197,8 @@ body.no-scroll{
 
 .bg__glow-container{
     position: absolute;
+    max-width: 100rem;
+    margin: 0 auto;
     inset: 0;
     width: 100%;
     height: 100%;
@@ -209,15 +211,15 @@ body.no-scroll{
     z-index: 0;
 }
 
-.bg__glow-first {
-    width: 40vh;
-    height: 40vh;
-    top: 40rem;
-    left: 3rem;
+.bg__glow:nth-child(1){
+    width: 30vh;
+    height: 30vh;
+    top: 35rem;
+    left: 2rem;
 }
 
 @media (max-width: 1024px) {
-    .bg__glow-first {
+    .bg__glow:nth-child(1) {
         width: 25vh;
         height: 25vh;
         top: 30rem;
@@ -225,15 +227,63 @@ body.no-scroll{
     }
 }
 
-.bg__glow-second {
+.bg__glow:nth-child(2) {
     width: 40vh;
     height: 40vh;
     top: 33rem;
-    left: 50rem;
+    left: 40rem;
 }
 
 @media (max-width: 1024px) {
-    .bg__glow-second {
+    .bg__glow:nth-child(2) {
+        width: 25vh;
+        height: 25vh;
+        top: 10rem;
+        left: 1111111110rem;
+    }
+}
+
+.bg__glow:nth-child(3) {
+    width: 30vh;
+    height: 30vh;
+    top: 120rem;
+    left: -3rem;
+}
+
+@media (max-width: 1024px) {
+    .bg__glow:nth-child(3) {
+        width: 25vh;
+        height: 25vh;
+        top: 10rem;
+        left: 1111111110rem;
+    }
+}
+
+.bg__glow:nth-child(4) {
+    width: 30vh;
+    height: 30vh;
+    top: 120rem;
+    left: 65rem;
+}
+
+@media (max-width: 1024px) {
+    .bg__glow:nth-child(4) {
+        width: 25vh;
+        height: 25vh;
+        top: 10rem;
+        left: 1111111110rem;
+    }
+}
+
+.bg__glow:nth-child(5) {
+    width: 30vh;
+    height: 30vh;
+    top: 140rem;
+    left: 27rem;
+}
+
+@media (max-width: 1024px) {
+    .bg__glow:nth-child(5) {
         width: 25vh;
         height: 25vh;
         top: 10rem;
@@ -329,7 +379,7 @@ body.no-scroll{
 
     width: 100%;
     background: var(--dark-purple);
-    padding: 3.7rem 8rem;
+    padding: 3.7rem 1rem;
     margin: 0 auto;
     z-index: 10;
 }
@@ -341,8 +391,9 @@ body.no-scroll{
 }
 
 .navbar{
-    max-width: 1600px;
+    max-width: 99rem;
     width: 100%;
+    margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -1259,8 +1310,144 @@ body.no-scroll{
 /*tabs*/
 
 .tabs{
-    padding-top: 4rem;
+    padding-top: 10.5rem;
+
     max-width: 99rem;
     margin: 0 auto;
+
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
+@media (max-width: 1440px) {
+    .tabs {
+        padding-left: 1rem;
+        padding-right: 1rem;
+        padding-top: 5rem;
+    }
+}
+
+@media (max-width: 1024px) {
+    .tabs {
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+.tabs__section{
+    padding-top: 4.3rem;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.tabs__title{
+    font-family: Orbitron-Bold-woff, serif;
+    font-size: clamp(1rem, 1.9rem, 2.4rem);
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.tabs__container{
+    padding-top: 3.3rem;
+
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+
+    gap: 3rem;
+}
+
+@media (max-width: 575px) {
+    .tabs__container{
+        grid-template-columns: 1fr;
+    }
+}
+
+.tabs__container-button{
+
+}
+
+.tabs__button{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    padding: 2.3rem 6rem;
+
+    background-color: transparent;
+    border: 2px solid;
+    border-image: linear-gradient(
+            to right,
+            var(--light-pink),
+            var(--ocean-blue)) 1;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.tabs__button:hover {
+    color: var(--white);
+    background-image: linear-gradient(
+            to left,
+            var(--blue),
+            var(--purple),
+            var(--pink),
+            var(--pink),
+            var(--purple),
+            var(--blue));
+    background-size: 200% 100%;
+    background-position: right center;
+}
+
+.tabs__button:active{
+    background-position: left center;
+}
+
+
+
+@media (max-width: 1024px) {
+    .tabs__button{
+        padding: 1.5rem 2rem;
+    }
+}
+
+
+.tabs__button-text{
+    font-family: Orbitron-Bold-woff, serif;
+    color: var(--gray-timer);
+    font-size: clamp(1rem, 2rem, 2.5rem);
+}
+
+.tabs__sub-container{
+    padding-top: 2rem;
+    padding-right: 0.5rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+
+    gap: 1.6rem;
+}
+
+.tabs__sub{
+    font-family: Orbitron-Bold-woff, serif;
+    font-size: clamp(1rem, 1.3rem, 2rem);
+}
+
+.tabs__sub-ico {
+    max-width: 3.5rem;
+    max-height: 1.5rem;
+}
+
+.tabs__picture{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.tabs__img{
+    display: block;
+    width: 100%;
+    object-fit: cover;
+}
