--- a/css/style.css
+++ b/css/style.css
@@ -327,6 +327,42 @@ body.no-scroll{
     background-position: left center;
 }
 
+.button_transparent{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    padding: 2.3rem 6rem;
+
+    background-color: transparent;
+    border: 2px solid;
+    border-image: linear-gradient(
+            to right,
+            var(--light-pink),
+            var(--ocean-blue)) 1;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.button_transparent:hover{
+    color: var(--white);
+    background-image: linear-gradient(
+            to left,
+            var(--blue),
+            var(--purple),
+            var(--pink),
+            var(--pink),
+            var(--purple),
+            var(--blue));
+    background-size: 200% 100%;
+    background-position: right center;
+}
+
+.button_transparent:active{
+    background-position: left center;
+}
+
 .card{
     box-sizing: border-box;
     padding: 1.5rem 1rem;
@@ -1111,6 +1147,14 @@ body.no-scroll{
     }
 }
 
+@media (max-width: 1024px) {
+    .swiper__title-container{
+        display: none;
+    }
+}
+
+
+
 .swiper__title-ico{
     max-width: 3.5rem;
     max-height: 1.5rem;
@@ -1307,6 +1351,33 @@ body.no-scroll{
     max-height: 1rem;
 }
 
+.swiper__button-container{
+    padding-top: 2rem;
+    display: none;
+}
+
+.swiper__button{
+    color: var(--white);
+    width: fit-content;
+    font-family: Orbitron-Bold-woff, serif;
+    font-size: clamp(1rem, 1.7rem, 2.4rem);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    gap: 1rem;
+}
+
+@media (max-width: 1024px){
+    .swiper__button-container{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+}
+
+
 /*tabs*/
 
 .tabs{
@@ -1368,50 +1439,11 @@ body.no-scroll{
 
 }
 
-.tabs__button{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-    padding: 2.3rem 6rem;
-
-    background-color: transparent;
-    border: 2px solid;
-    border-image: linear-gradient(
-            to right,
-            var(--light-pink),
-            var(--ocean-blue)) 1;
-    cursor: pointer;
-    transition: all 0.3s ease;
-}
-
-.tabs__button:hover {
-    color: var(--white);
-    background-image: linear-gradient(
-            to left,
-            var(--blue),
-            var(--purple),
-            var(--pink),
-            var(--pink),
-            var(--purple),
-            var(--blue));
-    background-size: 200% 100%;
-    background-position: right center;
-}
-
-.tabs__button:active{
-    background-position: left center;
-}
-
-
-
 @media (max-width: 1024px) {
     .tabs__button{
         padding: 1.5rem 2rem;
     }
 }
-
 
 .tabs__button-text{
     font-family: Orbitron-Bold-woff, serif;
@@ -1444,6 +1476,12 @@ body.no-scroll{
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+@media (max-width: 1024px) {
+    .tabs__picture{
+        padding-top: 3rem;
+    }
 }
 
 .tabs__img{
